test-output/src/tests/snapshots/test_output__tests__output__erlang-panic_with_message.snap
---
source: test-output/src/tests/output.rs
expression: output
---
--- main.gleam ----------------------
// SPDX-License-Identifier: Apache-2.0
// SPDX-FileCopyrightText: 2026 The Gleam contributors

pub fn main() -> Nil {
  echo "before"
  panic as "boom"
}


--- gleam run output ----------------
[90msrc/main.gleam:5[39m
"before"
[31;1mruntime error[39m: panic[0m

boom

stacktrace:
  main.main[90m src/main.gleam:6[0m
