test-output/src/tests/snapshots/test_output__tests__output__fizzbuzz.snap
---
source: test-output/src/tests/output.rs
expression: output
---
--- main.gleam ----------------------
// SPDX-License-Identifier: Apache-2.0
// SPDX-FileCopyrightText: 2026 The Gleam contributors

fn fizzbuzz(n: Int, limit: Int) -> Nil {
  case n > limit {
    True -> Nil
    False -> {
      case n % 3, n % 5 {
        0, 0 -> {
          echo "FizzBuzz"
          Nil
        }
        0, _ -> {
          echo "Fizz"
          Nil
        }
        _, 0 -> {
          echo "Buzz"
          Nil
        }
        _, _ -> {
          echo n
          Nil
        }
      }
      fizzbuzz(n + 1, limit)
    }
  }
}

pub fn main() -> Nil {
  fizzbuzz(1, 15)
}


--- gleam run output ----------------
[90msrc/main.gleam:22[39m
1
[90msrc/main.gleam:22[39m
2
[90msrc/main.gleam:14[39m
"Fizz"
[90msrc/main.gleam:22[39m
4
[90msrc/main.gleam:18[39m
"Buzz"
[90msrc/main.gleam:14[39m
"Fizz"
[90msrc/main.gleam:22[39m
7
[90msrc/main.gleam:22[39m
8
[90msrc/main.gleam:14[39m
"Fizz"
[90msrc/main.gleam:18[39m
"Buzz"
[90msrc/main.gleam:22[39m
11
[90msrc/main.gleam:14[39m
"Fizz"
[90msrc/main.gleam:22[39m
13
[90msrc/main.gleam:22[39m
14
[90msrc/main.gleam:10[39m
"FizzBuzz"
