test-output/src/tests/snapshots/test_output__tests__output__let_assert_failure.snap
---
source: test-output/src/tests/output.rs
expression: output
---
--- main.gleam ----------------------
// SPDX-License-Identifier: Apache-2.0
// SPDX-FileCopyrightText: 2026 The Gleam contributors

fn broken() -> Result(Int, String) {
  Error("nope")
}

pub fn main() -> Nil {
  let assert Ok(_) = broken() as "wanted a success"
  Nil
}


--- exit status ---------------------
1

--- standard output -----------------

--- standard error ------------------
runtime error: let assert

wanted a success

stacktrace:
  main.main[90m src/main.gleam:9[0m
