test-output/src/tests/snapshots/test_output__tests__output__lists.snap
---
source: test-output/src/tests/output.rs
expression: output
---
--- main.gleam ----------------------
// SPDX-License-Identifier: Apache-2.0
// SPDX-FileCopyrightText: 2026 The Gleam contributors

fn sum(list: List(Int)) -> Int {
  case list {
    [] -> 0
    [first, ..rest] -> first + sum(rest)
  }
}

fn length(list: List(Int)) -> Int {
  case list {
    [] -> 0
    [_, ..rest] -> 1 + length(rest)
  }
}

fn reverse_into(list: List(Int), accumulator: List(Int)) -> List(Int) {
  case list {
    [] -> accumulator
    [first, ..rest] -> reverse_into(rest, [first, ..accumulator])
  }
}

fn join(words: List(String)) -> String {
  case words {
    [] -> ""
    [word] -> word
    [word, ..rest] -> word <> " " <> join(rest)
  }
}

fn shape(list: List(Int)) -> String {
  case list {
    [] -> "empty"
    [_] -> "single"
    [first, second] if first == second -> "twin pair"
    [_, _] -> "pair"
    _ -> "longer"
  }
}

pub fn main() -> Nil {
  let numbers = [5, 1, 9, 3]
  echo sum(numbers)
  echo length(numbers)
  echo sum([40, ..[2]])

  // Reversal: sum of leading pair differs after reversing.
  let leading = case reverse_into(numbers, []) {
    [first, second, ..] -> first * 10 + second
    _ -> -1
  }
  echo leading

  echo join(["lists", "work", "everywhere"])

  echo shape([])
  echo shape([1])
  echo shape([4, 4])
  echo shape([4, 5])
  echo shape(numbers)
  Nil
}


--- gleam run output ----------------
[90msrc/main.gleam:45[39m
18
[90msrc/main.gleam:46[39m
4
[90msrc/main.gleam:47[39m
42
[90msrc/main.gleam:54[39m
39
[90msrc/main.gleam:56[39m
"lists work everywhere"
[90msrc/main.gleam:58[39m
"empty"
[90msrc/main.gleam:59[39m
"single"
[90msrc/main.gleam:60[39m
"twin pair"
[90msrc/main.gleam:61[39m
"pair"
[90msrc/main.gleam:62[39m
"longer"
