test-output/src/tests/snapshots/test_output__tests__output__native-echo_float.snap
---
source: test-output/src/tests/output.rs
expression: output
---
--- main.gleam ----------------------
// SPDX-License-Identifier: Apache-2.0
// SPDX-FileCopyrightText: 2024 The Gleam contributors

pub fn main() {
  echo 1.0
  echo 2.1
  echo 11.11
  echo 1.0e300
  echo 1.5e300
  echo 1.0e-300
  echo 1.5e-300
}


--- gleam run output ----------------
[90msrc/main.gleam:5[39m
1.0
[90msrc/main.gleam:6[39m
2.1
[90msrc/main.gleam:7[39m
11.11
[90msrc/main.gleam:8[39m
1e300
[90msrc/main.gleam:9[39m
1.5e300
[90msrc/main.gleam:10[39m
1e-300
[90msrc/main.gleam:11[39m
1.5e-300
