test-output/src/tests/snapshots/test_output__tests__output__negation_and_constant_forms.snap
---
source: test-output/src/tests/output.rs
expression: output
---
--- main.gleam ----------------------
// SPDX-License-Identifier: Apache-2.0
// SPDX-FileCopyrightText: 2026 The Gleam contributors

pub type Config {
  Config(host: String, port: Int, secure: Bool)
}

pub const default = Config("localhost", 80, False)

const data = <<1, 300:16-little, 2.5:32, "hé":utf8, 1:1, 0:3>>

const wrap = Ok

fn map(list: List(a), with: fn(a) -> b) -> List(b) {
  case list {
    [] -> []
    [first, ..rest] -> [with(first), ..map(rest, with)]
  }
}

pub fn main() -> Nil {
  let yes = True
  echo !yes
  let n = 42
  echo -n
  let config = Config(..default, port: 443, secure: !default.secure)
  echo config.port
  echo config.secure

  case data {
    <<1, small:16-little, f:32-float, text:bytes-size(3), pad:4>> -> {
      echo small
      echo f == 2.5
      echo text == <<"hé":utf8>>
      echo pad
      Nil
    }
    _ -> Nil
  }

  let wrapped = case map([1, 2], wrap) {
    [Ok(a), Ok(b)] -> a + b
    _ -> -1
  }
  echo wrapped
  Nil
}


--- gleam run output ----------------
[90msrc/main.gleam:23[39m
False
[90msrc/main.gleam:25[39m
-42
[90msrc/main.gleam:27[39m
443
[90msrc/main.gleam:28[39m
True
[90msrc/main.gleam:32[39m
300
[90msrc/main.gleam:33[39m
True
[90msrc/main.gleam:34[39m
True
[90msrc/main.gleam:35[39m
8
[90msrc/main.gleam:45[39m
3
